--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,31 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
+
+    <div class="content">
+        <h1>Bienvenido a Tratamiento Documentos</h1>
+        <h2>{{ fecha_hora }}</h2>
+    </div>
+    <nav>
+        <a href="/">Inicio</a>
+        <a href="#">Scraping</a>
+        <a href="{{ url_for('canje.canje_form') }}">Canje</a>
+        <div class="dropdown">
+            <a href="#">Soporte</a>
+            <div class="dropdown-content">
+                <a href="/">Gráfico</a>
+            </div>
+        </div>
+        <a href="#">Contacto</a>
+    </nav>
+
+    
+
     <div class="container">
         <h1 class="tit-buscador">Consultas sobre Normativas</h1>
         <form id="consultaForm" method="POST">
             <label for="numero_norma">Número de normativa:</label>
-            <input type="text" id="numero_norma" name="numero_norma" placeholder="Ejemplo: 1234" required>
+            <input type="text" id="numero_norma" name="numero_norma" placeholder="Ejemplo: 1234">
             
             <label for="consulta">Ingrese su consulta:</label>
             <input type="text" id="consulta" name="consulta" placeholder="Escriba su consulta aquí" required>
@@ -19,6 +39,25 @@
         
         <div id="respuesta"></div>
         <div id="ejemplo"></div>
+        <div class="acciones-respuesta">
+            <button id="boton-copiar-respuesta" title="Copiar al portapapeles">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy">
+                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                </svg>
+                <span class="sr-only">Copiar al portapapeles</span>
+            </button>
+            <button id="boton-generar-pdf" title="Generar PDF">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                    <polyline points="14 2 14 8 20 8"></polyline>
+                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                    <polyline points="10 9 9 9 8 9"></polyline>
+                </svg>
+                <span class="sr-only">Generar PDF</span>
+            </button>
+        </div>
     </div>
 
     <script>
@@ -34,8 +73,8 @@
                 const numeroNorma = numeroNormaInput.value.trim();
                 const consulta = consultaInput.value.trim();
                 
-                if (numeroNorma === "" || consulta === "") {
-                    respuestaDiv.innerHTML = "<p class='error'>Por favor, complete ambos campos.</p>";
+                if (numeroNorma === "" && consulta === "") {
+                    respuestaDiv.innerHTML = "<p class='error'>Por favor, complete al menos uno de los campos (Número de Norma o Consulta).</p>";
                     return;
                 }
                 
@@ -89,6 +128,7 @@
             });
         });
     </script>
+    <script src="{{ url_for('static', filename='js/copypaste.js') }}"></script>
 </body>
 <footer>
     <!-- <p>© 2025 Licencia Nacional de Conducir Digital | Todos los derechos reservados</p> -->
