Instalar tesseract-ocr

--- a/templates/capture_canje.html
+++ b/templates/capture_canje.html
@@ -398,7 +398,7 @@
                         infoDiv.style.display = 'block';
                     } else {
                         infoDiv.style.display = 'none';
-                        alert('No se 777pudieron leer Nombre: {data.nombre} los datos del dorso del DNI.  Apellidos: {data.apellidos} Número de Documento: ${data.numero_documento}');
+                        alert('No se 777pudieron leer Nombre: {data.nombre} los datos del dorso del DNI. Número de Documento: ${data.numero_documento}');
                     }  
                 } else {
                     console.log(`Datos para ${documentType}:`, data);
